--- a/src/index.css
+++ b/src/index.css
@@ -12,4 +12,7 @@
     .main-still{
         @apply text-5xl font-bold font-Livvic leading-48
     }
+    .text-still-base {
+        @apply text-base font-semibold font-Livvic
+    }
 }
