add about hero h2 text

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,6 @@
     .ctaContainer{
         @apply w-full max-w-917 mx-auto px-5
     }
-}
     .header-link{
         @apply text-lg font-semibold leading-7 font-Livvic
     }
@@ -19,4 +18,8 @@
     .text-still-base {
         @apply text-base font-semibold font-Livvic
     }
+.about-still{
+    @apply text-[64px] font-bold font-Livvic leading-[100px]
+}
+}
 
