--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,8 @@
 .eror{
     color: rgb(183, 46, 46);
     display: none;
+    font-size: 15px;
+    font-weight: 700;
 }
 .right{
     display: none;
@@ -56,3 +58,6 @@
     outline-offset: 5px;
     
 }
+textarea {
+    resize: none;
+  }
