--- a/src/index.css
+++ b/src/index.css
@@ -27,37 +27,60 @@
         @apply text-[64px] font-bold font-Livvic leading-[100px]
     }
 }
-*::placeholder{
+
+*::placeholder {
     color: rgb(174, 48, 48);
     font-size: 15px;
     font-weight: 600;
     line-height: 25px;
 }
-.eror{
+
+.eror {
     color: rgb(183, 46, 46);
     display: none;
     font-size: 15px;
     font-weight: 700;
 }
-.right{
+
+.right {
     display: none;
     color: rgb(14, 197, 179);
 }
+
 .contact-email:not(:placeholder-shown)+.eror {
     display: block;
 }
-.contact-email:valid ~ .eror {
+
+.contact-email:valid~.eror {
     display: none;
 }
-.contact-email:valid ~ .right {
-    display:block;
+
+.contact-email:valid~.right {
+    display: block;
 }
 
 *:focus {
-    outline: 5px dotted rgb(192, 173, 173);
-    outline-offset: 5px;
-    
+    outline: none;
 }
+
 textarea {
     resize: none;
+}
+
+ *:focus::placeholder {
+    color: rgb(241, 228, 228); 
   }
+
+
+
+.active:valid {
+    border-color: green;
+}
+
+.active:invalid {
+    border-color: rgb(255, 247, 247);
+}
+
+.active :placeholder-shown {
+    border-color: white;
+}
